P2/confs/app1.yaml


apiVersion: apps/v1

# type of k3s object
kind: Deployment

# description of the object
metadata:
  name: app1
  namespace: default

  # Labels are key-value pairs used to identify, organize, and categorize Kubernetes objects, making them easy to filter and select.
  labels:
    app: app1

spec:
  replicas: 1

  strategy:
    type: Recreate

  # Selectors are used to filter and identify Kubernetes objects based on their labels, enabling relationships and targeting between resources.
  selector:
    # matchLabels select objects with the exact label's key/value
    matchLabels:
      app: app1

  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: nginx
          image: nginx:stable-perl
          # tell Kubernetes to do that connection
          volumeMounts:
            - name: app1-volume
              # where the volume is mounted
              mountPath: /usr/share/nginx/html
          ports:
            - containerPort: 80
      volumes:
        - name: app1-volume
          configMap:
            # name of the ConfigMap containing the HTML file
            name: app1-html
            
---

apiVersion: v1
kind: Service
metadata:
  name: app1-service
spec:
  selector:
    app : app1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
